# trajectory_publisher

./: CMakeLists.txt
config/: rviz.rviz
launch/: circle_trajectory.launch  px4_offb_circle_trajectory.launch
matlab/: figure8.m
quadrotor_msgs/: CMakeLists.txt  package.xml
quadrotor_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
src/: main.cpp
trajectory_publisher/: CMakeLists.txt  package.xml
trajectory_publisher/include/trajectory_publisher/: trajectory_publisher.h
trajectory_publisher/launch/: circle_trajectory.launch  px4_offb_circle_trajectory.launch
trajectory_publisher/src/: trajectory_publisher.cpp
